# flowconnect_recon_mvp

./: .gitignore  README.md  pyproject.toml  pytest.ini
app/: main.py
app/api/: graphql.py  rest.py
app/core/: config.py  errors.py  exception_handlers.py
app/db/: init_db.py  models.py  session.py
app/modules/invoices/: api.py  gql.py  schemas.py  service.py
app/modules/reconciliation/: ai.py  api.py  explain_service.py  gql.py  match_service.py  reconcile_service.py  schemas.py  scoring.py  service.py
app/modules/tenants/: api.py  gql.py  schemas.py  service.py
app/modules/transactions/: api.py  gql.py  schemas.py  service.py
app/postman/: FlowConnect Recon MVP.postman_collection.json
app/schemas/: rest.py
tests/: conftest.py  test_import_idempotency.py  test_invoices.py  test_reconcile_confirm_explain.py  test_tenant_isolation.py
